--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SESSION_ID=Khan~z53T5807
 AUTO_STATUS_SEEN=true
 REJECT_CALL=false
 MODE=public
-WELCOME=false
+WELCOME=true
 AUTO_READ=false
 AUTO_TYPING=false
 AUTO_RECORDING=false
